--- a/vignettes/generate_report.Rmd
+++ b/vignettes/generate_report.Rmd
@@ -18,10 +18,8 @@ knitr::opts_chunk$set(
 library(metaboprep)
 
 # import data 
-dat <- read_metabolon(system.file("extdata", "metabolon_v1.1_example.xlsx", package = "metaboprep"), sheet="OrigScale")
-
-# create the object
-m <- Metaboprep(data = dat$data, samples = dat$samples, features = dat$features)
+f <- system.file("extdata", "metabolon_v1.1_example.xlsx", package = "metaboprep")
+m <- read_metabolon(f, sheet="OrigScale", return_Metaboprep = TRUE)
 
 # run QC
 m <- m |>
