--- a/inst/rmarkdown/templates/qc_report/skeleton/02_data_filtering.Rmd
+++ b/inst/rmarkdown/templates/qc_report/skeleton/02_data_filtering.Rmd
@@ -21,18 +21,19 @@ excl_tbl <- rbind(features_df, samples_df)
 
 # table notes
 general_note <- glue::glue(
-  "Six primary data filtering exclusion steps were made during the preparation of the data. ",
+  "Eight primary data filtering exclusion steps were made during the preparation of the data. ",
   "User-defined thresholds indicated with an asterisk. In addition, the number of outlier data", 
   "points modified during QC are presented."
 )
 sub_notes <- c(
+  "Features manually excluded",
+  "Features with missingness >=80%.",
+  glue::glue("Features exclusions based on the user defined threshold of *>={sprintf('%.0f%%', attr(metaboprep@data, 'qc_feature_missingness')*100)}."),
+  "Samples manually excluded",
   "Samples with missingness >=80%.",
-  glue::glue("Sample exclusions based on the user defined threshold of *>={sprintf('%.0f%%', 0.8*100)}."),
-  "Features with missingness >=80% (xenobiotics are not included in this step).",
-  glue::glue("Feature exclusions based on user defined threshold of *>={sprintf('%.0f%%', 0.8*100)}",
-             "(xenobiotics are not included in this step)."),
-  glue::glue("Samples with a total-peak-area or total-sum-abundance that is *>={5} SD from the mean."),
-  glue::glue("Samples that are *>={5} SD from the mean on principal component axis 1 and 2")
+  glue::glue("Samples exclusions based on user defined threshold of *>={sprintf('%.0f%%', attr(metaboprep@data, 'qc_sample_missingness')*100)}."),
+  glue::glue("Samples with a total-peak-area or total-sum-abundance that is *>={attr(metaboprep@data, 'qc_outlier_udist')} SD from the mean."),
+  glue::glue("Samples that are *>={attr(metaboprep@data, 'qc_pc_outlier_sd')} SD from the mean on principal components 1-to-{attr(metaboprep@sample_summary, 'qc_num_pcs_scree')}")
 ) |> paste(sep = ifelse(knitr::is_html_output(), "\n", "\\\\\n"))
 
 # table
@@ -50,7 +51,7 @@ excl_tbl |>
     width  = "35em"
   ) |>
   kableExtra::row_spec(
-    row    = c(1,4), 
+    row    = c(1,5), 
     italic = TRUE
   ) |>
   kableExtra::footnote(
