--- a/vignettes/generate_report.Rmd
+++ b/vignettes/generate_report.Rmd
@@ -17,25 +17,29 @@ knitr::opts_chunk$set(
 ```{r render}
 library(metaboprep)
 
-# import data 
-dat <- read_metabolon(system.file("extdata", "metabolon_v1.1_example.xlsx", package = "metaboprep"), sheet="OrigScale")
+# import data directly as a Metaboprep object
+dat <- read_metabolon(system.file("extdata", "metabolon_v1.1_example.xlsx", package = "metaboprep"), 
+                      sheet="OrigScale",
+                      return_Metaboprep = TRUE)
 
 # create the object
-m <- Metaboprep(data = dat$data, samples = dat$samples, features = dat$features)
+# m <- Metaboprep(data = dat$data, samples = dat$samples, features = dat$features)
+m <- dat
 
 # run QC
+## Adding suppressWarnings() to avoid deparse() error when rendering vignette with S7 method warnings
 m <- m |>
-  quality_control(source_layer = "input", 
-                  sample_missingness  = 0.5, 
-                  feature_missingness = 0.3, 
-                  total_peak_area_sd  = 5, 
-                  outlier_udist       = 5, 
-                  outlier_treatment   = "leave_be", 
-                  winsorize_quantile  = 1.0, 
-                  tree_cut_height     = 0.5, 
-                  pc_outlier_sd       = 5, 
-                  sample_ids          = NULL, 
-                  feature_ids         = NULL)
+  suppressWarnings( quality_control(source_layer = "input", 
+                                    sample_missingness  = 0.2, 
+                                    feature_missingness = 0.2, 
+                                    total_peak_area_sd  = 5, 
+                                    outlier_udist       = 5, 
+                                    outlier_treatment   = "leave_be", 
+                                    winsorize_quantile  = 1.0, 
+                                    tree_cut_height     = 0.5, 
+                                    pc_outlier_sd       = 5, 
+                                    sample_ids          = NULL, 
+                                    feature_ids         = NULL) )
 
 # render report
 generate_report(m,
